[gd_scene load_steps=5 format=3 uid="uid://pwol3utkvhmw"]

[ext_resource type="Script" uid="uid://dkt4fqmpu2udq" path="res://scripts/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://6oje4efghbhd" path="res://assets/image.png" id="1_7p1mj"]
[ext_resource type="PackedScene" uid="uid://dge4gmamdqweu" path="res://scenes/killzone.tscn" id="2_md0e3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(22, 22)

[node name="enemy" type="Node2D"]
script = ExtResource("1_4ra3w")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.192, 0.192)
texture = ExtResource("1_7p1mj")

[node name="killzone" parent="." instance=ExtResource("2_md0e3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
shape = SubResource("RectangleShape2D_md0e3")

[node name="bullet_spawn_position" type="Marker2D" parent="."]

[node name="shoot_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
